--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "babel-preset-es2017-node7",
-  "version": "0.5.2",
-  "description": "Babel preset to make node@7 ES2017 compatible",
+  "name": "@tonyxiao/babel-preset-node",
+  "version": "7.6",
+  "description": "Babel preset to use flow, jsx, and stage-0 with latest version of node with least amount of transpiation possible. Version / tag corresponds to min node version supported",
   "main": "index.js",
   "files": [
     "index.js",
@@ -9,7 +9,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tengattack/babel-preset-es2017-node7.git"
+    "url": "git+https://github.com/tonyxiao/babel-preset-node.git"
   },
   "keywords": [
     "babel",
@@ -17,7 +17,7 @@
     "babel-preset-es2017",
     "node7"
   ],
-  "author": "tengattack <i@bless.moe>",
+  "author": "tonyxiao",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.18.0"
@@ -25,8 +25,15 @@
   "dependencies": {
     "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0"
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-decorators": "^6.22.0",
+    "babel-plugin-transform-do-expressions": "^6.22.0",
+    "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-plugin-transform-unicode-property-regex": "^2.0.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.23.0"
   }
 }
